[package]
name = "secure-runtime"
version = "0.1.0"
edition = "2018"
authors = ["Stephen Akinyemi <steve@gigamono.com>"]
description = "A Secure Runtime for JavaScript"
readme = "README.md"
repository = "https://github.com/gigamono/secure-runtime"
keywords = ["no-code", "capabilities", "runtime", "serverless", "deno"]
categories = ["development-tools", "web-programming"]
documentation = "https://github.com/gigamono/secure-runtime"
homepage = "https://gigamono.com"
license-file = "LICENSE"
# See more keys and their definitions at https://doc.rust-lang.org/cargo/reference/manifest.html

[dependencies]
deno_core = { path = "../deno/core" }
utilities = { path = "../utilities" }

[lib]
name = "secure_runtime"
path = "lib/lib.rs"
